SERVER-65655 Skip reinitializing TicketHolders in reinitializeStorageEngine()